# src/main/java/com/diev/api/auth/AuthResponse.java
@@ -1,0 +1,8 @@
+package com.diev.api.auth;
+
+public record AuthResponse(
+        String accessToken,
+        String tokenType,
+        AuthUserResponse user
+) {
+}
