# src/main/java/com/diev/api/auth/AuthUserResponse.java
@@ -1,0 +1,14 @@
+package com.diev.api.auth;
+
+import com.diev.entity.Role;
+
+import java.util.UUID;
+
+public record AuthUserResponse(
+        UUID id,
+        String email,
+        Role role,
+        Integer balance,
+        Boolean blocked
+) {
+}
